[gd_scene load_steps=2 format=3 uid="uid://bmv6a0o8fgfcw"]

[ext_resource type="Script" path="res://scripts/ui/AchievementsScreen.gd" id="1_k4j8v"]

[node name="AchievementsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_k4j8v")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="TitleContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ACHIEVEMENTS"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "Ã—"

[node name="StatsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="CategoryTabs" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Combat" type="Control" parent="MainContainer/CategoryTabs"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/CategoryTabs/Combat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AchievementList" type="VBoxContainer" parent="MainContainer/CategoryTabs/Combat/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3